# TP-ochestration-spinkube-1

./: .gitignore  Readme.md
app-whoami/: Cargo.toml  README.md  deploy.yml  spin.toml
app-whoami/src/: lib.rs
deployment/flux/: kustomization.yaml
deployment/flux/metallb/: ip-pool.yaml
deployment/flux/queued-whoami/: amqp-scale.yaml  app.yaml
deployment/flux/whoami/: amqp-scale.yaml  app.yaml  cpu-scale.yaml  http-scale.yaml  ingress.yaml  scale.yaml
deployment/permissions/: roles.yaml  web-app-service-account.yaml
deployment/terraform/: flux2.tf  keda.tf  loadbalancing.tf  main.tf  rabbitmq.tf  spin.tf
deployment/terraform/kube/crds/spin/: spinApp.yaml  spinAppExecutor.yaml
deployment/terraform/kube/network/: ingress.yaml
deployment/terraform/modules/flux-bootstrap/: main.tf
deployment/terraform/modules/flux-sync/: main.tf  variables.tf
