[package]
name = "app-whoami"
authors = ["Nils Ponsard <nilsponsad@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-wasi"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
# kube = { version = "0.90.0", default-features = false, features = ["config"] }
# k8s-openapi = { version = "0.21.1", features = ["latest"] }
# tokio = { version = "1", features = ["full"] }

# kube = { version = "0.64.0", features = ["client"] }
# tokio = { version = "1", features = ["full"] }
[workspace]
